# WiseEngine

./: .gitmodules  CMakeLists.txt  README.md
WiseEngineCore/: CMakeLists.txt
WiseEngineCore/includes/: Application.hpp  Event.hpp  Log.hpp
WiseEngineCore/src/: Application.cpp  Window.cpp  Window.hpp
WiseEngineEditor/: CMakeLists.txt
WiseEngineEditor/src/: main.cpp
